--- a/resources/css/output.css
+++ b/resources/css/output.css
@@ -51,7 +51,9 @@
 }
 
 .products .swiper-button-next,
-.products .swiper-button-prev {
+.products .swiper-button-prev,
+.reviews .swiper-button-next,
+.reviews .swiper-button-prev {
   color: #fff !important;
   background-color: rgba(3, 81, 70, 1);
   display: flex;
@@ -63,7 +65,9 @@
 }
 
 .products .swiper-button-next::after,
-.products .swiper-button-prev::after {
+.products .swiper-button-prev::after,
+.reviews .swiper-button-next::after,
+.reviews .swiper-button-prev::after {
   display: none;
 }
 
@@ -669,12 +673,24 @@ video {
   position: sticky;
 }
 
+.\!left-2 {
+  left: 0.5rem !important;
+}
+
 .\!left-\[2\.5vw\] {
   left: 2.5vw !important;
 }
 
+.\!right-2 {
+  right: 0.5rem !important;
+}
+
 .\!right-\[2\.5vw\] {
   right: 2.5vw !important;
+}
+
+.\!top-\[50\%\] {
+  top: 50% !important;
 }
 
 .\!top-\[85\%\] {
@@ -749,6 +765,14 @@ video {
   bottom: 50%;
 }
 
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.bottom-3 {
+  bottom: 0.75rem;
+}
+
 .bottom-\[1\%\] {
   bottom: 1%;
 }
@@ -769,8 +793,20 @@ video {
   bottom: 40vw;
 }
 
+.bottom-\[7\.5\%\] {
+  bottom: 7.5%;
+}
+
 .left-0 {
   left: 0px;
+}
+
+.left-1\/2 {
+  left: 50%;
+}
+
+.left-2 {
+  left: 0.5rem;
 }
 
 .left-\[1\.5vw\] {
@@ -821,12 +857,12 @@ video {
   right: 22%;
 }
 
-.right-\[25\%\] {
-  right: 25%;
-}
-
 .right-\[27\.5vw\] {
   right: 27.5vw;
+}
+
+.right-\[5\%\] {
+  right: 5%;
 }
 
 .right-\[5vw\] {
@@ -917,6 +953,11 @@ video {
   order: 5;
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .mx-\[10\%\] {
   margin-left: 10%;
   margin-right: 10%;
@@ -925,16 +966,6 @@ video {
 .mx-\[1vw\] {
   margin-left: 1vw;
   margin-right: 1vw;
-}
-
-.mx-\[2\%\] {
-  margin-left: 2%;
-  margin-right: 2%;
-}
-
-.mx-\[5\%\] {
-  margin-left: 5%;
-  margin-right: 5%;
 }
 
 .mx-auto {
@@ -987,6 +1018,10 @@ video {
   margin-left: auto;
 }
 
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
 .mr-\[1vw\] {
   margin-right: 1vw;
 }
@@ -1001,6 +1036,10 @@ video {
 
 .mt-16 {
   margin-top: 4rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .mt-\[0\.25vw\] {
@@ -1035,6 +1074,10 @@ video {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
 }
@@ -1067,6 +1110,10 @@ video {
   height: 8vw;
 }
 
+.h-\[95\%\] {
+  height: 95%;
+}
+
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
@@ -1084,8 +1131,8 @@ video {
   max-height: 6vw;
 }
 
-.min-h-\[25vw\] {
-  min-height: 25vw;
+.min-h-20 {
+  min-height: 5rem;
 }
 
 .min-h-\[30vw\] {
@@ -1104,6 +1151,10 @@ video {
   width: 8vw !important;
 }
 
+.w-1\/12 {
+  width: 8.333333%;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -1112,12 +1163,24 @@ video {
   width: 20%;
 }
 
+.w-2\/3 {
+  width: 66.666667%;
+}
+
 .w-2\/5 {
   width: 40%;
 }
 
 .w-3\/5 {
   width: 60%;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .w-\[10vw\] {
@@ -1204,10 +1267,6 @@ video {
   width: 80%;
 }
 
-.w-\[80vw\] {
-  width: 80vw;
-}
-
 .w-\[85\%\] {
   width: 85%;
 }
@@ -1243,6 +1302,10 @@ video {
 
 .max-w-full {
   max-width: 100%;
+}
+
+.grow {
+  flex-grow: 1;
 }
 
 .grow-0 {
@@ -1297,6 +1360,11 @@ video {
   flex-basis: 65%;
 }
 
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .-translate-y-1\/2 {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1308,6 +1376,10 @@ video {
 
 .resize-none {
   resize: none;
+}
+
+.grid-cols-\[1\.25fr_2fr_1fr_1fr_1fr_1fr\] {
+  grid-template-columns: 1.25fr 2fr 1fr 1fr 1fr 1fr;
 }
 
 .flex-col {
@@ -1324,10 +1396,6 @@ video {
 
 .items-stretch {
   align-items: stretch;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-end {
@@ -1366,8 +1434,8 @@ video {
   gap: 1rem;
 }
 
-.gap-\[0\.5vw\] {
-  gap: 0.5vw;
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .gap-\[1\.25vw\] {
@@ -1414,16 +1482,15 @@ video {
   gap: 5vw;
 }
 
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+
 .space-y-\[15vw\] > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(15vw * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(15vw * var(--tw-space-y-reverse));
-}
-
-.space-y-\[5vw\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(5vw * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(5vw * var(--tw-space-y-reverse));
 }
 
 .self-start {
@@ -1434,12 +1501,20 @@ video {
   overflow: hidden;
 }
 
+.text-nowrap {
+  text-wrap: nowrap;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
 
 .rounded-2xl {
   border-radius: 1rem;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
 }
 
 .rounded-\[1\.2em\] {
@@ -1452,10 +1527,6 @@ video {
 
 .rounded-\[15vw\] {
   border-radius: 15vw;
-}
-
-.rounded-\[1vw\] {
-  border-radius: 1vw;
 }
 
 .rounded-\[2em\] {
@@ -1498,6 +1569,11 @@ video {
   border-radius: 0.125rem;
 }
 
+.rounded-t-3xl {
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
+}
+
 .rounded-t-\[5vw\] {
   border-top-left-radius: 5vw;
   border-top-right-radius: 5vw;
@@ -1513,6 +1589,10 @@ video {
 
 .border-b {
   border-bottom-width: 1px;
+}
+
+.border-t {
+  border-top-width: 1px;
 }
 
 .border-black {
@@ -1565,6 +1645,10 @@ video {
   padding: 0.25rem;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .p-\[10vw\] {
   padding: 10vw;
 }
@@ -1601,9 +1685,29 @@ video {
   padding: 6vw;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .px-\[1\.5vw\] {
@@ -1611,19 +1715,9 @@ video {
   padding-right: 1.5vw;
 }
 
-.px-\[10vw\] {
-  padding-left: 10vw;
-  padding-right: 10vw;
-}
-
 .px-\[12\.5vw\] {
   padding-left: 12.5vw;
   padding-right: 12.5vw;
-}
-
-.px-\[2\.5\%\] {
-  padding-left: 2.5%;
-  padding-right: 2.5%;
 }
 
 .px-\[2vw\] {
@@ -1661,9 +1755,34 @@ video {
   padding-bottom: 0.25rem;
 }
 
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-2\.5 {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .py-\[1\.5vw\] {
@@ -1711,11 +1830,6 @@ video {
   padding-bottom: 4vw;
 }
 
-.py-\[5\%\] {
-  padding-top: 5%;
-  padding-bottom: 5%;
-}
-
 .py-\[5vw\] {
   padding-top: 5vw;
   padding-bottom: 5vw;
@@ -1723,6 +1837,10 @@ video {
 
 .\!pb-6 {
   padding-bottom: 1.5rem !important;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem;
 }
 
 .pb-2 {
@@ -1761,10 +1879,6 @@ video {
   padding-right: 7.5vw;
 }
 
-.pt-1\.5 {
-  padding-top: 0.375rem;
-}
-
 .pt-\[14vw\] {
   padding-top: 14vw;
 }
@@ -1795,6 +1909,19 @@ video {
 
 .font-Khand {
   font-family: Khand;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-2xs {
+  font-size: 0.625rem;
+}
+
+.text-3xs {
+  font-size: 0.5rem;
 }
 
 .text-\[1\.15vw\] {
@@ -1863,6 +1990,31 @@ video {
 
 .text-\[7vw\] {
   font-size: 7vw;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold {
@@ -2040,6 +2192,18 @@ video {
   transition-duration: 500ms;
 }
 
+.first\:border-b:first-child {
+  border-bottom-width: 1px;
+}
+
+.odd\:border-b:nth-child(odd) {
+  border-bottom-width: 1px;
+}
+
+.odd\:border-t:nth-child(odd) {
+  border-top-width: 1px;
+}
+
 .\*\:hover\:fill-yellow-400:hover > * {
   fill: #facc15;
 }
@@ -2090,8 +2254,8 @@ video {
     width: 95%;
   }
 
-  .max-md\:gap-\[5vw\] {
-    gap: 5vw;
+  .max-md\:gap-5 {
+    gap: 1.25rem;
   }
 
   .max-md\:self-end {
@@ -2104,6 +2268,10 @@ video {
 
   .max-md\:rounded-\[2\.5vw\] {
     border-radius: 2.5vw;
+  }
+
+  .max-md\:rounded-lg {
+    border-radius: 0.5rem;
   }
 
   .max-md\:border {
@@ -2126,13 +2294,44 @@ video {
   }
 }
 
+@media (min-width: 400px) {
+  .min-\[400px\]\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .min-\[400px\]\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 480px) {
+  .min-\[480px\]\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
 @media (min-width: 640px) {
+  .sm\:\!left-0 {
+    left: 0px !important;
+  }
+
+  .sm\:\!right-0 {
+    right: 0px !important;
+  }
+
   .sm\:mt-32 {
     margin-top: 8rem;
   }
 
   .sm\:\!h-12 {
     height: 3rem !important;
+  }
+
+  .sm\:\!h-\[6vw\] {
+    height: 6vw !important;
   }
 
   .sm\:\!w-12 {
@@ -2143,16 +2342,89 @@ video {
     width: 0.75rem !important;
   }
 
+  .sm\:\!w-\[6vw\] {
+    width: 6vw !important;
+  }
+
+  .sm\:w-12 {
+    width: 3rem;
+  }
+
+  .sm\:w-16 {
+    width: 4rem;
+  }
+
+  .sm\:w-4\/5 {
+    width: 80%;
+  }
+
+  .sm\:basis-1\/6 {
+    flex-basis: 16.666667%;
+  }
+
+  .sm\:gap-12 {
+    gap: 3rem;
+  }
+
   .sm\:gap-\[2vw\] {
     gap: 2vw;
+  }
+
+  .sm\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .sm\:py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 
   .sm\:\!pb-8 {
     padding-bottom: 2rem !important;
   }
+
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .sm\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 768px) {
+  .md\:static {
+    position: static;
+  }
+
   .md\:absolute {
     position: absolute;
   }
@@ -2165,12 +2437,24 @@ video {
     position: sticky;
   }
 
+  .md\:\!left-14 {
+    left: 3.5rem !important;
+  }
+
   .md\:\!left-\[3\.75vw\] {
     left: 3.75vw !important;
   }
 
+  .md\:\!right-14 {
+    right: 3.5rem !important;
+  }
+
   .md\:\!right-\[3\.75vw\] {
     right: 3.75vw !important;
+  }
+
+  .md\:\!top-1\/2 {
+    top: 50% !important;
   }
 
   .md\:\!top-1\/4 {
@@ -2225,16 +2509,16 @@ video {
     left: 7vw;
   }
 
+  .md\:left-\[80\%\] {
+    left: 80%;
+  }
+
   .md\:right-1\/4 {
     right: 25%;
   }
 
   .md\:right-\[12vw\] {
     right: 12vw;
-  }
-
-  .md\:right-\[15\%\] {
-    right: 15%;
   }
 
   .md\:right-\[15\.5\%\] {
@@ -2356,8 +2640,8 @@ video {
     margin-right: 1vw;
   }
 
-  .md\:mr-\[3vw\] {
-    margin-right: 3vw;
+  .md\:mr-\[5\%\] {
+    margin-right: 5%;
   }
 
   .md\:mr-auto {
@@ -2368,12 +2652,12 @@ video {
     margin-top: 0px;
   }
 
-  .md\:mt-\[0\.5vw\] {
-    margin-top: 0.5vw;
+  .md\:mt-2 {
+    margin-top: 0.5rem;
   }
 
-  .md\:mt-\[2\.5vw\] {
-    margin-top: 2.5vw;
+  .md\:mt-6 {
+    margin-top: 1.5rem;
   }
 
   .md\:mt-\[7\.5vw\] {
@@ -2382,6 +2666,10 @@ video {
 
   .md\:flex {
     display: flex;
+  }
+
+  .md\:grid {
+    display: grid;
   }
 
   .md\:hidden {
@@ -2425,8 +2713,8 @@ video {
     max-height: 2vw;
   }
 
-  .md\:min-h-\[10vw\] {
-    min-height: 10vw;
+  .md\:min-h-16 {
+    min-height: 4rem;
   }
 
   .md\:min-h-\[2\.75vw\] {
@@ -2447,6 +2735,14 @@ video {
 
   .md\:w-1\/2 {
     width: 50%;
+  }
+
+  .md\:w-3\/5 {
+    width: 60%;
+  }
+
+  .md\:w-6 {
+    width: 1.5rem;
   }
 
   .md\:w-\[0\.75vw\] {
@@ -2557,6 +2853,10 @@ video {
     flex-grow: 1;
   }
 
+  .md\:basis-1\/2 {
+    flex-basis: 50%;
+  }
+
   .md\:basis-2\/3 {
     flex-basis: 66.666667%;
   }
@@ -2597,8 +2897,13 @@ video {
     flex-basis: 50%;
   }
 
-  .md\:basis-\[52\.5\%\] {
-    flex-basis: 52.5%;
+  .md\:-translate-x-\[80\%\] {
+    --tw-translate-x: -80%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .md\:grid-cols-\[1\.25fr_2fr_1fr_1fr_1fr_1fr\] {
+    grid-template-columns: 1.25fr 2fr 1fr 1fr 1fr 1fr;
   }
 
   .md\:flex-row {
@@ -2641,6 +2946,18 @@ video {
     gap: 0px;
   }
 
+  .md\:gap-1 {
+    gap: 0.25rem;
+  }
+
+  .md\:gap-12 {
+    gap: 3rem;
+  }
+
+  .md\:gap-2 {
+    gap: 0.5rem;
+  }
+
   .md\:gap-3 {
     gap: 0.75rem;
   }
@@ -2649,16 +2966,16 @@ video {
     gap: 1rem;
   }
 
+  .md\:gap-8 {
+    gap: 2rem;
+  }
+
   .md\:gap-\[0\.5vw\] {
     gap: 0.5vw;
   }
 
   .md\:gap-\[1\.25vw\] {
     gap: 1.25vw;
-  }
-
-  .md\:gap-\[1\.5vw\] {
-    gap: 1.5vw;
   }
 
   .md\:gap-\[1vw\] {
@@ -2681,12 +2998,9 @@ video {
     gap: 5vw;
   }
 
-  .md\:gap-\[6vw\] {
-    gap: 6vw;
-  }
-
-  .md\:gap-\[7\.5vw\] {
-    gap: 7.5vw;
+  .md\:gap-x-2 {
+    -moz-column-gap: 0.5rem;
+         column-gap: 0.5rem;
   }
 
   .md\:space-y-\[7\.5vw\] > :not([hidden]) ~ :not([hidden]) {
@@ -2701,6 +3015,10 @@ video {
 
   .md\:self-center {
     align-self: center;
+  }
+
+  .md\:rounded-3xl {
+    border-radius: 1.5rem;
   }
 
   .md\:rounded-\[0\.25vw\] {
@@ -2757,6 +3075,10 @@ video {
     padding: 0px;
   }
 
+  .md\:p-1 {
+    padding: 0.25rem;
+  }
+
   .md\:p-\[0\.5vw\] {
     padding: 0.5vw;
   }
@@ -2776,6 +3098,21 @@ video {
   .md\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .md\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .md\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .md\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .md\:px-\[0\.5vw\] {
@@ -2841,6 +3178,16 @@ video {
   .md\:py-1 {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
+  }
+
+  .md\:py-1\.5 {
+    padding-top: 0.375rem;
+    padding-bottom: 0.375rem;
+  }
+
+  .md\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .md\:py-\[0\.125vw\] {
@@ -2969,6 +3316,15 @@ video {
     text-align: justify;
   }
 
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-2xs {
+    font-size: 0.625rem;
+  }
+
   .md\:text-\[0\.75vw\] {
     font-size: 0.75vw;
   }
@@ -3033,16 +3389,35 @@ video {
     font-size: 2vw;
   }
 
-  .md\:text-\[3\.5vw\] {
-    font-size: 3.5vw;
-  }
-
   .md\:text-\[3vw\] {
     font-size: 3vw;
   }
 
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .md\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
   .md\:font-medium {
     font-weight: 500;
+  }
+
+  .md\:leading-3 {
+    line-height: .75rem;
+  }
+
+  .md\:leading-normal {
+    line-height: 1.5;
   }
 
   .md\:tracking-tighter {
@@ -3078,8 +3453,120 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:\!left-10 {
+    left: 2.5rem !important;
+  }
+
+  .lg\:\!right-10 {
+    right: 2.5rem !important;
+  }
+
+  .lg\:min-h-10 {
+    min-height: 2.5rem;
+  }
+
+  .lg\:min-h-28 {
+    min-height: 7rem;
+  }
+
+  .lg\:basis-1\/3 {
+    flex-basis: 33.333333%;
+  }
+
+  .lg\:gap-1\.5 {
+    gap: 0.375rem;
+  }
+
+  .lg\:gap-4 {
+    gap: 1rem;
+  }
+
   .lg\:gap-\[1\.5vw\] {
     gap: 1.5vw;
+  }
+
+  .lg\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .lg\:py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .lg\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .lg\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:min-h-12 {
+    min-height: 3rem;
+  }
+
+  .xl\:w-10 {
+    width: 2.5rem;
+  }
+
+  .xl\:gap-6 {
+    gap: 1.5rem;
+  }
+
+  .xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .xl\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .xl\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .xl\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .xl\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 
